--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 services:
   webcontainer:
     build: .
-    image: vooplv/webcontainer
+    image: vooperino/webcontainer
     tty: true
     stdin_open: true
     tmpfs:
