--- a/nginx-build/Dockerfile
+++ b/nginx-build/Dockerfile
@@ -5,13 +5,13 @@ MAINTAINER voop@voop.lv
 EXPOSE 80
 EXPOSE 443
 
-COPY ../core_files/scripts scripts
-COPY ../install install
-COPY config config
-
+COPY config /temp_config
 COPY /init.sh /init.sh
+COPY /install.sh /install.sh
 
 RUN apt-get install nginx -y
-RUN cp -r -f /scripts/systemd-replacer/systemctl3.py /usr/bin/systemctl
+RUN bash /install.sh
+RUN rm /install.sh
+RUN rm -rf /temp_config
 
 CMD bash /init.sh
