Updated Nginx Build

--- a/nginx-build/Dockerfile
+++ b/nginx-build/Dockerfile
@@ -6,6 +6,7 @@ EXPOSE 80
 EXPOSE 443
 
 COPY config /temp_config
+COPY scripts /temp_scripts
 COPY /init.sh /init.sh
 COPY /install.sh /install.sh
 
@@ -13,5 +14,6 @@ RUN apt-get install nginx -y
 RUN bash /install.sh
 RUN rm /install.sh
 RUN rm -rf /temp_config
+RUN rm -rf /temp_scripts
 
 CMD bash /init.sh
