--- a/nginx-build/config/nginx/nginx.conf
+++ b/nginx-build/config/nginx/nginx.conf
@@ -41,5 +41,5 @@ http {
 	resolver_timeout 2s;
 	
 	# Load webconfigs from shared volumes
-	include /web/config/nginx/sites-enabled/*;
+	include /web/config/sites-enabled/*.conf;
 }
