--- a/openresty-build/config/defaults/page/default.conf
+++ b/openresty-build/config/defaults/page/default.conf
@@ -22,10 +22,7 @@ server {
     location /openresty {
         default_type text/html;
         content_by_lua_block {
-            ngx.say("
-                <h1><center>This docker container is running OpenResty</center><h1>
-                <p><center>If you are reading this that means openresty is running and this page is under LUA block</center></p>
-            ")
+            ngx.say("<h1><center>This docker container is running OpenResty</center><h1>")
         }
     }
 }
