--- a/nginx-build/docker-compose.yml
+++ b/nginx-build/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
   webcontainer:
-    image: vooperino/webcontainer:tag
+    image: vooperino/webcontainer:nginx
     tty: true
     stdin_open: true
     tmpfs:
