--- a/openresty-build/docker-compose.yml
+++ b/openresty-build/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
   webcontainer:
-    image: vooperino/webcontainer:openresty
+    image: vooplv/webcontainer:openresty
     tty: true
     stdin_open: true
     tmpfs:
