Added lua packaged path

--- a/openresty-build/config/openresty/nginx.conf
+++ b/openresty-build/config/openresty/nginx.conf
@@ -17,6 +17,8 @@ http {
     keepalive_timeout  65;
     server_tokens off;
 
+    lua_package_path '/usr/local/share/lua/5.4/?.lua;;';
+
     include /web/config/sites-enabled/*.conf;
 
 }
