--- a/core_files/supervisord/templates/phpfpm.conf
+++ b/core_files/supervisord/templates/phpfpm.conf
@@ -1,8 +1,11 @@
-[program:php%PHP_FPM_A%_fpm]
-command=/bin/bash -c "echo 'Starting PHP 7.4 FPM'; php-fpm7.4 -F"
+[program:php%PHP_VER%-fpm]
+command=/usr/sbin/php-fpm%PHP_VER% --nodaemonize --fpm-config /etc/php/%PHP_VER%/fpm/php-fpm.conf
 autostart=true
 autorestart=true
+startretries=3
+stopsignal=TERM
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
 stdout_logfile_maxbytes=0
 stderr_logfile_maxbytes=0
+priority=999
