--- a/core_files/supervisord/1_core.conf
+++ b/core_files/supervisord/1_core.conf
@@ -5,9 +5,11 @@ logfile_maxbytes=0
 loglevel=info
 
 [program:cron]
-command=/bin/bash -c "echo 'Starting cron'; cron -f"
+command=/usr/sbin/cron -f
 autostart=true
 autorestart=true
+startretries=5
+stopsignal=TERM
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
 stdout_logfile_maxbytes=0
