Updated configuration for the input module

--- a/core_files/supervisord/templates/phpfpm.conf
+++ b/core_files/supervisord/templates/phpfpm.conf
@@ -1,5 +1,5 @@
-[program:php%PHP_VER%-fpm]
-command=/usr/sbin/php-fpm%PHP_VER% --nodaemonize --fpm-config /etc/php/%PHP_VER%/fpm/php-fpm.conf
+[program:php{PHP_VERSION}-fpm]
+command=/usr/sbin/php-fpm{PHP_VERSION} --nodaemonize --fpm-config /etc/php/{PHP_VERSION}/fpm/php-fpm.conf
 autostart=true
 autorestart=true
 startretries=3
