Updated core config

--- a/core_files/supervisord/core.conf
+++ b/core_files/supervisord/core.conf
@@ -1,16 +1,12 @@
 [supervisord]
 nodaemon=true
+pidfile=/var/run/supervisord/supervisord.pid
 logfile=/dev/stdout
 logfile_maxbytes=0
 loglevel=info
 
-[program:cron]
-command=/usr/sbin/cron -f
+[program:supercronic]
+command=supercronic -overlapping REPLACE_ME
 autostart=true
 autorestart=true
-startretries=5
-stopsignal=TERM
-stdout_logfile=/dev/stdout
-stderr_logfile=/dev/stderr
-stdout_logfile_maxbytes=0
-stderr_logfile_maxbytes=0
+redirect_stderr=true
