--- a/core_files/supervisord/core.conf
+++ b/core_files/supervisord/core.conf
@@ -6,7 +6,7 @@ logfile_maxbytes=0
 loglevel=info
 
 [program:supercronic]
-command=supercronic -overlapping REPLACE_ME
+command=supercronic -overlapping /config/cronTasks
 autostart=true
 autorestart=true
 redirect_stderr=true
