--- a/core_files/supervisord/core.conf
+++ b/core_files/supervisord/core.conf
@@ -1,12 +1,41 @@
 [supervisord]
 nodaemon=true
-pidfile=/var/run/supervisord/supervisord.pid
+pidfile=/tmp/supervisord.pid
 logfile=/dev/stdout
 logfile_maxbytes=0
 loglevel=info
+user=root
+group=root
+
+[unix_http_server]
+file=/var/run/supervisor.sock
+chmod=0700
+
+[supervisorctl]
+serverurl=unix:///var/run/supervisor.sock
+
+[rpcinterface:supervisor]
+supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 [program:supercronic]
 command=supercronic -overlapping /config/cronTasks
+user=root
+group=root
 autostart=true
 autorestart=true
 redirect_stderr=true
+stdout_logfile=/dev/stdout
+stderr_logfile=/dev/stderr
+stdout_logfile_maxbytes=0
+stderr_logfile_maxbytes=0
+
+[program:permissionsfixer]
+command=applypermissions
+user=root
+group=root
+autostart=true
+autorestart=true
+stdout_logfile=/dev/stdout
+stderr_logfile=/dev/stderr
+stdout_logfile_maxbytes=0
+stderr_logfile_maxbytes=0
