--- a/core_files/supervisord/optional/le_ssl_new.conf
+++ b/core_files/supervisord/optional/le_ssl_new.conf
@@ -2,6 +2,8 @@
 command=/bin/bash -c "/scripts/background/background_le_ssl_renew.sh"
 autostart=true
 autorestart=false
+user=root
+group=root
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
 stdout_logfile_maxbytes=0
