Renamed service due to intcmd

--- a/openresty-build/config/supervisord/1_pack.conf
+++ b/openresty-build/config/supervisord/1_pack.conf
@@ -1,4 +1,4 @@
-[program:openresty]
+[program:webserver]
 command=/usr/local/openresty/bin/openresty -g 'daemon off;'
 autostart=true
 autorestart=true
