Updated nginx template

--- a/openresty-build/config/openresty/nginx.conf
+++ b/openresty-build/config/openresty/nginx.conf
@@ -9,13 +9,15 @@ events {
     worker_connections  1024;
 }
 
-
 http {
     include       mime.types;
     default_type  application/octet-stream;
     sendfile        on;
     keepalive_timeout  65;
     server_tokens off;
+    
+    access_log /dev/stdout main;
+    error_log /dev/stderr info, warn, error;
 
     lua_package_path '/usr/local/share/lua/5.4/?.lua;;';
 
