--- a/core_files/supervisord/templates/phpfpm.conf
+++ b/core_files/supervisord/templates/phpfpm.conf
@@ -4,6 +4,8 @@ autostart=true
 autorestart=true
 startretries=3
 stopsignal=TERM
+user=www-data
+group=www-data
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
 stdout_logfile_maxbytes=0
