Updated SSL Renew

--- a/core_files/supervisord/optional/le_ssl_new.conf
+++ b/core_files/supervisord/optional/le_ssl_new.conf
@@ -1,5 +1,5 @@
 [program:le_ssl_renew]
-command=/bin/bash -c "/scripts/background/background_le_ssl_renew.sh"
+command=background_le_ssl_renew
 autostart=true
 autorestart=false
 user=root
