Adding health check

--- a/openresty-build/Dockerfile
+++ b/openresty-build/Dockerfile
@@ -14,4 +14,6 @@ RUN rm /install.sh
 RUN rm -rf /temp_config
 RUN rm -rf /temp_scripts
 
+HEALTHCHECK --interval=30s --timeout=10s --start-period=20s --retries=3 CMD health_check
+
 CMD bash /init.sh
