--- a/nginx-build/Dockerfile
+++ b/nginx-build/Dockerfile
@@ -5,7 +5,6 @@ EXPOSE 80
 EXPOSE 443
 
 COPY config /temp_config
-COPY scripts /temp_scripts
 COPY /init.sh /init.sh
 COPY /install.sh /install.sh
 
@@ -13,6 +12,7 @@ RUN apt-get install nginx -y
 RUN bash /install.sh
 RUN rm /install.sh
 RUN rm -rf /temp_config
-RUN rm -rf /temp_scripts
+
+HEALTHCHECK --interval=30s --timeout=10s --start-period=20s --retries=3 CMD health_check
 
 CMD bash /init.sh
