--- a/.github/workflows/build_core_container_amd64.yml
+++ b/.github/workflows/build_core_container_amd64.yml
@@ -1,10 +1,10 @@
-name: Build Core Container
+name: Build Core Container AMD64
 
 on:
   workflow_dispatch: {}
-  push:
-    branches:
-      - main
+  #push:
+  #  branches:
+  #    - main
 
 jobs:
   build_core:
