--- a/.github/workflows/build_core_container_amd64.yml
+++ b/.github/workflows/build_core_container_amd64.yml
@@ -14,5 +14,5 @@ jobs:
     with:
       image_name: 'vooplv/webcontainer'
       image_tag: 'core'
-      dockerfile_path: ${{ github.workspace }}
+      type: 'core'
 
