--- a/.github/workflows/build_openresty_container_amd64.yml
+++ b/.github/workflows/build_openresty_container_amd64.yml
@@ -14,4 +14,4 @@ jobs:
     with:
       image_name: 'vooplv/webcontainer'
       image_tag: 'openresty'
-      dockerfile_path: ${{ github.workspace }}/openresty-build
+      type: 'openresty'
