--- a/.github/workflows/build_core_container_amd64.yml
+++ b/.github/workflows/build_core_container_amd64.yml
@@ -13,6 +13,6 @@ jobs:
     secrets: inherit
     with:
       image_name: 'vooplv/webcontainer'
-      image_tag: 'core'
+      image_tag: 'dev'
       type: 'core'
 
