--- a/.github/workflows/build_openresty_container_amd64.yml
+++ b/.github/workflows/build_openresty_container_amd64.yml
@@ -13,5 +13,5 @@ jobs:
     secrets: inherit
     with:
       image_name: 'vooplv/webcontainer'
-      image_tag: 'openresty'
+      image_tag: 'dev'
       type: 'openresty'
