--- a/.github/workflows/build_container_template.yml
+++ b/.github/workflows/build_container_template.yml
@@ -87,7 +87,7 @@ jobs:
 
           ./build-images.sh $BSH_ARG
       - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@v0.33.1
+        uses: aquasecurity/trivy-action@0.33.1
         with:
           scan-type: 'image'
           image-ref: '${{ inputs.image_name }}:${{ inputs.type }}-${{ inputs.image_tag }}'
