--- a/nginx-build/Dockerfile
+++ b/nginx-build/Dockerfile
@@ -1,4 +1,4 @@
-ARG BASE_IMAGE=ghcr.io/vooperino/webcontainer:core-dev
+ARG BASE_IMAGE=vooplv/webcontainer:core-dev
 FROM ${BASE_IMAGE}
 
 ENV DEBIAN_FRONTEND=noninteractive
