--- a/.github/workflows/build_container_template.yml
+++ b/.github/workflows/build_container_template.yml
@@ -72,11 +72,11 @@ jobs:
             BSH_ARG="--core-only"
           fi
           if [ "${{ inputs.type }}" = "nginx" ]; then
-            CI_BASECORE_OVERRIDE=${{ inputs.core_image }}
+            CI_CORE_CONTAINER=${{ inputs.core_image }}
             BSH_ARG="--nginx-only"
           fi
           if [ "${{ inputs.type }}" = "openresty" ]; then
-            CI_BASECORE_OVERRIDE=${{ inputs.core_image }}
+            CI_CORE_CONTAINER=${{ inputs.core_image }}
             BSH_ARG="--openresty-only"
           fi
 
@@ -88,8 +88,8 @@ jobs:
             export CI_BASENAME_OVERRIDE=${{ inputs.image_name }}
           fi
 
-          if [ ! -z "${CI_BASECORE_OVERRIDE}" ]; then
-            echo "Using core image override: ${CI_BASECORE_OVERRIDE}"
+          if [ ! -z "${CCI_CORE_CONTAINER}" ]; then
+            echo "[INFO] Using core image override: ${CI_CORE_CONTAINER}"
           fi
 
           ./build-images.sh $BSH_ARG
