Updated trigger push

--- a/.github/workflows/build_containers_amd64.yml
+++ b/.github/workflows/build_containers_amd64.yml
@@ -3,9 +3,9 @@ run-name: Build Containers AMD64
 
 on:
   workflow_dispatch: {}
-  #push:
-  #  branches:
-  #    - main
+  push:
+    branches:
+      - main
 
 jobs:
   build_core_amd64:
