--- a/core_files/supervisord/optional/le_ssl_new.conf
+++ b/core_files/supervisord/optional/le_ssl_new.conf
@@ -2,8 +2,8 @@
 command=background_le_ssl_renew
 autostart=true
 autorestart=false
-user=www-data
-group=www-data
+user=root
+group=root
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
 stdout_logfile_maxbytes=0
