Testing out with sarif

--- a/.github/workflows/build_container_template.yml
+++ b/.github/workflows/build_container_template.yml
@@ -24,6 +24,10 @@ on:
         required: false
         type: string
         default: 'vooplv/webcontainer:core-dev'
+      trivy_version:
+        required: true
+        type: string
+        default: '0.33.1'
 
 jobs:
   validate:
@@ -94,29 +98,38 @@ jobs:
 
           ./build-images.sh $BSH_ARG
       - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@0.33.1
+        uses: aquasecurity/trivy-action@${{ vars.trivy_version }}
         with:
           scan-type: 'image'
           image-ref: '${{ inputs.image_name }}:${{ inputs.type }}-${{ inputs.image_tag }}'
-          format: 'table'
+          format: 'sarif'
           ignore-unfixed: true
           hide-progress: true
           exit-code: 0
           vuln-type: 'os,library'
-          output: 'trivy-results-${{ inputs.image_name }}-${{ inputs.type }}-${{ inputs.image_tag }}.txt'
-      #- name: Upload Trivy Scan Results
-      #  uses: actions/upload-artifact@v4.6.2
-      #  if: always()
-      #  with:
-      #    name: trivy-results-${{ inputs.image_name }}-${{ inputs.type }}-${{ inputs.image_tag }}
-      #    path: trivy-results-${{ inputs.image_name }}-${{ inputs.type }}-${{ inputs.image_tag }}.txt
-      #    retention-days: 1
-      - name: Add results to summary
+          output: 'trivy-results-${{ inputs.image_name }}-${{ inputs.type }}-${{ inputs.image_tag }}.sarif'
+      - name: Upload Trivy scan results to GitHub Security tab
         if: always()
-        run: |
-          echo "## Trivy Scan Results" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          cat trivy-results-${{ inputs.image_name }}-${{ inputs.type }}-${{ inputs.image_tag }}.txt >> $GITHUB_STEP_SUMMARY
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: 'trivy-results-${{ inputs.image_name }}-${{ inputs.type }}-${{ inputs.image_tag }}.sarif'
+      #- name: Run Trivy vulnerability scanner
+      #  uses: aquasecurity/trivy-action@${{ vars.trivy_version }}
+      #  with:
+      #    scan-type: 'image'
+      #    image-ref: '${{ inputs.image_name }}:${{ inputs.type }}-${{ inputs.image_tag }}'
+      #    format: 'table'
+      #    ignore-unfixed: true
+      #    hide-progress: true
+      #    exit-code: 0
+      #    vuln-type: 'os,library'
+      #    output: 'trivy-results-${{ inputs.image_name }}-${{ inputs.type }}-${{ inputs.image_tag }}.txt'
+      #- name: Add results to summary
+      #  if: always()
+      #  run: |
+      #    echo "## Trivy Scan Results" >> $GITHUB_STEP_SUMMARY
+      #    echo "" >> $GITHUB_STEP_SUMMARY
+      #    cat trivy-results-${{ inputs.image_name }}-${{ inputs.type }}-${{ inputs.image_tag }}.txt >> $GITHUB_STEP_SUMMARY
       - name: Log in to Docker Hub
         uses: docker/login-action@v3.4.0
         with:
@@ -128,17 +141,4 @@ jobs:
           docker push vooplv/${{ inputs.image_name }}:${{ inputs.type }}-${{ inputs.image_tag }}
       - name: Log out from Docker Hub
         run: docker logout
-      #- name: Log in to GH Container Registry
-      #  uses: docker/login-action@v3.4.0
-      #  with:
-      #    registry: ghcr.io
-      #    username: ${{ github.actor }}
-      #    password: ${{ secrets.GITHUB_TOKEN }}
-      #- name: Tag and Push to GHCR
-      #  run: |
-      #    GH_PATH=${{ github.repository_owner }}
-      #    docker tag ${{ inputs.image_name }}:${{ inputs.type }}-${{ inputs.image_tag }} ghcr.io/${GH_PATH,,}/${{ inputs.image_name }}:${{ inputs.type }}-${{ inputs.image_tag }}
-      #    docker push ghcr.io/${GH_PATH,,}/${{ inputs.image_name }}:${{ inputs.type }}-${{ inputs.image_tag }}
-      #- name: Log out from Docker GHCR
-      #  run: docker logout
       
