--- a/.github/workflows/build_container_template.yml
+++ b/.github/workflows/build_container_template.yml
@@ -58,7 +58,7 @@ jobs:
     needs: ["validate"]
     permissions:
       contents: read
-      packages: write
+      security-events: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v4.2.2
